# tg-team-task-tracker

./: .coverage  .env.example  .gitignore  .replit  CUSTOMER_GUIDE.md  DEPLOYMENT.md  RAILWAY_CHECKLIST.md  RAILWAY_READY.md  RAILWAY_SETUP.md  README.md  bot.py  config.py  database.py  db_async.py  db_postgres.py  docker-compose.yml  init_demo_data.py  main.py  migrate_admins_to_user_groups.py  models.py  performance.py  pyproject.toml  requirements.txt  run_tests_coverage.bat  simple_cache.py  task_management.db  test_admin_removal.py  utils.py
handlers/: notifications.py  registration.py
handlers/common/: __init__.py  cancel.py  start.py
handlers/group_admin/: __init__.py
handlers/super_admin/: __init__.py  groups.py  registration.py  users.py
handlers/tasks/: __init__.py  creation.py  editing.py  filters.py  viewing.py
handlers/workers/: __init__.py
templates/: index.html
tests/: README.md  TESTING.md  __init__.py  check_db.py  conftest.py  reset_test_db.py  run_all_task_tests.py  run_tests.bat  test_assignee_status.py  test_database.py  test_db_async.py  test_db_async_mock.py  test_db_functions.py  test_permissions.py  test_task_crud.py  test_task_crud_new.py  test_task_integration.py  test_task_scenarios.py  test_tasks.py  test_tasks_simple.py
utils/: helpers.py  permissions.py
